<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

    <EditText
        android:id="@+id/input1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/number_1"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor,MissingConstraints"
>

    </EditText>

    <EditText
        android:id="@+id/input2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/number_2"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/input1">
    </EditText>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/sumButton"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:text="@string/sum" />

        <Button
            android:id="@+id/subButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply" />
        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"/>

    </LinearLayout>




</LinearLayout>